<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SocarImporter</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">Map importer</string>
    <string name="title_activity_login">Map importer login</string>
    <string name="l_region">Region</string>
    <string name="l_subregion">Subregion</string>
    <string name="l_all_zone">All zones</string>
    <string name="l_zones">Zones</string>
    <string name="l_download">Download</string>
    <string name="l_user_name">User Name: </string>
    <string name="l_password">Password: </string>
    <string name="l_cancel">Cancel</string>
    <string name="l_login">Login</string>
    <string name="title_activity_connection_settings">Settings</string>
    <string name="socar_db">/mnt/sdcard/socardb/</string>

</resources>