<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:stretchColumns="1" >

    <TableRow>

        <TextView
            android:id="@+id/TextView01"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/l_user_name" >
        </TextView>

        <EditText
            android:id="@+id/txtUname"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="" >
        </EditText>
    </TableRow>

    <TableRow>

        <TextView
            android:id="@+id/TextView02"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/l_password" >
        </TextView>

        <EditText
            android:id="@+id/txtPwd"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:password="true"
            android:text="" >
        </EditText>
    </TableRow>

    <TableRow>

        <Button
            android:id="@+id/btnCancel"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/l_cancel" >
        </Button>

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/l_login" >
        </Button>
    </TableRow>

</TableLayout>